--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Dictionary App</title>
-    <link href="assets/css/style fur app.css " rel="stylesheet">
+    <link href="assets/css/styles.css " rel="stylesheet">
     
 </head>
 <body> Bashr Ismail
@@ -84,7 +84,8 @@
 
     </footer>
     </marquee>
-    <script src="assets/js/index.js"></script>
+    <script src="assets/js/styles.css"></script>
     
 </body>
 </html>
+
